Fix extra margin-bottom on image render

--- a/web/src/scss/_content.scss
+++ b/web/src/scss/_content.scss
@@ -364,10 +364,16 @@
     display: none;
     width: 400px;
     height: 400px;
+    margin: 0;
+    padding: 0;
 }
 
 .br-photo-overlay {
     display: none;
+    width: 400px;
+    height: 400px;
+    margin: 0;
+    padding: 0;
 }
 
 .br-photo-frame {
